zwischenstand und erste links

--- a/index.html
+++ b/index.html
@@ -40,15 +40,48 @@
 				<section>Start</section>
 
 				<section>SRAT (Blinry)</section>
-				<section>Displays  (Bleeptrack)</section>
+				<section>
+					<h2>Fancy kinetic Displays</h2>
+					<section>https://www.youtube.com/watch?v=U-wAGqZ_Qcg</section>
+					<section>https://www.youtube.com/watch?v=0MbeUOh8Fto</section>
+					<section>color flap clap display http://www.urbnblog.com/tag/split-flap/</section>
+					<section>https://www.youtube.com/watch?v=lvtfD_rJ2hE mit</section>
+					<section>yarn display https://www.youtube.com/watch?v=dvDHNDkO-Qo</section>
+					
+				</section>
 				<section>4D (Blinry)</section>
-				<section>Mindfuck Spiele (Bleeptrack)</section>
+				<section>
+					<h2>Mindfuck Spiele</h2>
+					<section>stanley parable</section>
+					<section>what is left of edith finch</section>
+					<section>dr langeskov, the tiger, the emerald, ...</section>
+					<section>the void</section>
+					<section>eternal darkness</section>
+					<section>antichamber</section>
+					<section>fahrenheit</section>
+					<section>deadly premonition</section>
+				</section>
 				<section>Gostak (Blinry)</section>
-				<section>Regex crosswords (Bleeptrack)</section>
+				<section>
+					<h2>Regex crosswords</h2>
+					<section>eins machen</section>
+				</section>
 				<section>Sprachen (Blinry)</section>
-				<section>Autostereogramme (Bleeptrack)</section>
+				<section>
+					<h2>Autostereogramme</h2>
+					<section>stereogramm</section>
+					<section>autostereogramme</section>
+					<section>animation</section>
+					<section>tetris</section>
+					<section>spiel</section>
+					<section>evtl 34c3 bild mit fairydust? hab ich das noch irgendwo?
+					</section>
+				</section>
 				<section>Voyager golden record (Blinry)</section>
-				<section>Generative art (Bleeptrack)</section>
+				<section>
+					<h2>Generative art</h2>
+					<section></section>
+				</section>
 				<section>kuriose Musik (Blinry)</section>
 				<section>Optische Täuschungen/Sinnestäuschungen (Bleeptrack)</section>
 				<section>Turing-Vollständigkeit/NP-Schwere (Blinry)</section>
