--- a/index.html
+++ b/index.html
@@ -101,7 +101,24 @@
                         </ul>
                     </section>
                 </section>
-				<section>Displays  (Bleeptrack)</section>
+				<section>
+					<section><h2>Fancy kinetic Displays</h2></section>
+					<section>
+						<iframe width="100%" height="500px" src="https://www.youtube.com/embed/U-wAGqZ_Qcg" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+					</section>
+					<section>
+						<iframe width="100%" height="500px" src="https://www.youtube.com/embed/0MbeUOh8Fto" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+					</section>
+					<section>
+						<iframe width="100%" height="500px" src="https://www.youtube.com//embed/lvtfD_rJ2hE" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+					 </section>
+					<section>
+						<iframe width="100%" height="500px" src="https://www.youtube.com//embed/ttajKgpJTns" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+					</section>
+					<section>
+						<iframe width="100%" height="500px" src="https://www.youtube.com/embed/dvDHNDkO-Qo" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+					</section>
+				</section>
 				<section>
                     <section>
                         <img src="img/4dtoys.jpg">
@@ -113,8 +130,9 @@
                         <iframe width="800" height="450" src="https://www.youtube.com/embed/0t4aKJuKP0Q?rel=0" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
                     </section>
                 </section>
-				<section>Mindfuck Spiele (Bleeptrack)</section>
 				<section>
+					<section><h2>Mindfuck Spiele</h2></section>
+					
                     <section>
                         <img src="img/gostak.png">
 
@@ -133,7 +151,7 @@ But you are the gostak. The gostak distims the doshes.
 And no glaud will vorl them from you.
                         </pre></code>
                     </section>
-                    <section>
+                	<section>
                         <code><pre>
 The Gostak
 
@@ -173,10 +191,38 @@ You could then tunk the chuld, or pob it at a tendo, or whatever:
   Nothing heamy results.
                         </pre></code>
                     </section>
+                    <section>
+                    	<h3>The Stanley Parable</h3>
+                    	<iframe width="800" height="450" src="https://www.youtube.com/embed/Kl5Jp66xyd4?start=120" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+                    </section>
+                    <section>
+                    	<h3>Dr. Langeskov, The Tiger, and The Terribly Cursed Emerald</h3>
+                    	<iframe width="800" height="450" src="https://www.youtube.com/embed/Gc2G3LARtI" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+                    </section>
+                    <section>
+                    	<h3>The Void</h3>
+                    	<iframe width="800" height="450" src="https://www.youtube.com/embed/YVQhuhi1QTA?start=226" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+                    </section>
+                    <section>
+                    	<h3>LSD Dream Emulator</h3>
+                    	<iframe width="800" height="450" src="https://www.youtube.com/embed/ol4OSIGGukA?start=10" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+                    </section>
                 </section>
-				<section>Regex crosswords (Bleeptrack)</section>
+				<section>
+					<h2>Regex crosswords</h2>
+					<a target="_blank" href="https://regexcrossword.com/challenges/intermediate/puzzles/1">Los geht's!</a>
+				</section>
 				<section>Sprachen (Blinry)</section>
-				<section>Autostereogramme (Bleeptrack)</section>
+				<section>
+					<section><h2>Autostereogramme</h2></section>
+					<section>stereogramm</section>
+					<section>autostereogramme</section>
+					<section>animation</section>
+					<section>tetris</section>
+					<section>spiel</section>
+					<section>evtl 34c3 bild mit fairydust? hab ich das noch irgendwo?
+					</section>
+				</section>
                 <section>
                     <section>
                         <h2>Talking to aliens</h2>
@@ -198,11 +244,13 @@ You could then tunk the chuld, or pob it at a tendo, or whatever:
                         <img src="img/goldenrecord2.jpg" style="height: 13em">
                     </section>
                 </section>
-				<section>Generative art (Bleeptrack)</section>
+				<section>
+					<section><h2>Generative Art</h2></section>
+				</section>
 				<section>kuriose Musik (Blinry)</section>
 				<section>Optische Täuschungen/Sinnestäuschungen (Bleeptrack)</section>
 				<section>Turing-Vollständigkeit/NP-Schwere (Blinry)</section>
-				<section>? (Bleeptrack)</section>
+				
 				<section>Zendo (Blinry)</section>
 
 				<section>ENDE</section>
