--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>reveal.js</title>
+		<title>Operation Mindfuck</title>
 
 		<link rel="stylesheet" href="css/reveal.css">
 		<link rel="stylesheet" href="css/theme/black.css">
@@ -37,7 +37,11 @@
 
 
 
-				<section>Start</section>
+				<section>
+                    <img src="img/resistors.png">
+                    <h2>Operation Mindfuck</h2>
+                    <h4>Bleeptrack &amp; blinry</h4>
+                </section>
 
 				<section>
                     <section>
@@ -247,7 +251,47 @@ You could then tunk the chuld, or pob it at a tendo, or whatever:
 				<section>
 					<section><h2>Generative Art</h2></section>
 				</section>
-				<section>kuriose Musik (Blinry)</section>
+				<section>
+                    <section>
+                        <h2>Music</h2>
+                    </section>
+                    <section>
+                        <h2>4′33″</h2>
+                        <img src="img/433.png">
+                    </section>
+                    <section>
+                        <h2>Organ²/ASLSP</h2>
+                        <img src="img/halberstadt.png">
+                    </section>
+                    <section>
+                        <img src="img/burchardi.jpg">
+                    </section>
+                    <section>
+                        <img src="img/orgel.jpg">
+                    </section>
+                    <section>
+                        <img src="img/balg.jpg">
+                    </section>
+                    <section>
+                        <img src="img/aslsp.jpg">
+                    </section>
+                    <section>
+                        <img src="img/beginning.png">
+                    </section>
+                    <section>
+                        <img src="img/next.png">
+                    </section>
+                    <section>
+                        <img src="img/faeries1.png">
+                    </section>
+                    <section>
+                        <img src="img/faeries2.png">
+                    </section>
+
+                    <section>
+                        <iframe width="800" height="450" src="https://www.youtube.com/embed/sCgT94A7WgI?t=3m50s&rel=0" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+                    </section>
+                </section>
 				<section>Optische Täuschungen/Sinnestäuschungen (Bleeptrack)</section>
 				<section>Turing-Vollständigkeit/NP-Schwere (Blinry)</section>
 				
