--- a/index.html
+++ b/index.html
@@ -216,12 +216,14 @@ You could then tunk the chuld, or pob it at a tendo, or whatever:
 				<section>
 					<section><h2>Autostereogramme</h2></section>
 					<section>stereogramm</section>
-					<section>autostereogramme</section>
-					<section>animation</section>
-					<section>tetris</section>
-					<section>spiel</section>
-					<section>evtl 34c3 bild mit fairydust? hab ich das noch irgendwo?
+					<section><img src="stereogramm.jpg"></section>
+					<section>
+						<img width="100%" height="auto" src="https://upload.wikimedia.org/wikipedia/commons/9/9b/Stereogram_Tut_Animated_Shark_Small.gif">
+						<h4>CC-BY-SA Fred Hsu</h4>
 					</section>
+
+					<section><a target="_blank" href="http://www.hidden-3d.com/games_stereogram_tetris.php">Tetris</a></section>
+					<section><a target="_blank" href="http://andygiger.com/science/riddle3/riddle3.html">3D riDDle III</a></section>
 				</section>
                 <section>
                     <section>
