--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 
 				<section>
-                    <img src="img/resistors.png">
+                    <img src="img/resistors.png" style="height: 8em">
                     <h2>Operation Mindfuck</h2>
                     <h4>Bleeptrack &amp; blinry</h4>
                 </section>
@@ -216,7 +216,34 @@ You could then tunk the chuld, or pob it at a tendo, or whatever:
 					<h2>Regex crosswords</h2>
 					<a target="_blank" href="https://regexcrossword.com/challenges/intermediate/puzzles/1">Los geht's!</a>
 				</section>
-				<section>Sprachen (Blinry)</section>
+				<section>
+                    <section>
+                        <h2>Toki Pona</h2>
+                    </section>
+                    <section>
+                        <img src="img/tokipona.png">
+                    </section>
+                    <section>
+                        <ul>
+                            <li>18 letters (j k l m n p s t w a e i o u)
+                            <li>120 root words</li>
+                        </ul>
+
+                        <p><a href="http://rowa.giso.de/languages/toki-pona/english/lessons.php">Lessons by Robert Warnke</a></p>
+                    </section>
+                    <section>
+                        <p>monsuta waso pi pan linja</p>
+                    </section>
+                    <section>
+                        <p>"bird-like monster of line-like bread"</p>
+                    </section>
+                    <section>
+                        <p>flying spaghetti monster</p>
+                    </section>
+                    <section>
+                        <a href="https://morr.cc/sike-mama/"><img src="img/sikemama.png" style="height: 15em"></a>
+                    </section>
+                </section>
 				<section>
 					<section><h2>Autostereogramme</h2></section>
 					<section>stereogramm</section>
@@ -295,10 +322,12 @@ You could then tunk the chuld, or pob it at a tendo, or whatever:
                     </section>
                 </section>
 				<section>Optische Täuschungen/Sinnestäuschungen (Bleeptrack)</section>
-				<section>Turing-Vollständigkeit/NP-Schwere (Blinry)</section>
-				
-				<section>Zendo (Blinry)</section>
-
+				<section>
+                    <section>
+                        <h2>Zendo</h2>
+                        <img src="img/zendo.jpg">
+                    </section>
+                </section>
 				<section>ENDE</section>
 			</div>
 		</div>
