--- a/index.html
+++ b/index.html
@@ -98,12 +98,6 @@
     (E) temperature, wind-velocity, latitude, and longitude
                             </pre></code>
                     </section>
-                    <section>
-                        <ul>
-                            <li>unique solution</li>
-                            <li>takes about half an hour to complete</li>
-                        </ul>
-                    </section>
                 </section>
 				<section>
 					<section><h2>Fancy kinetic Displays</h2></section>
@@ -227,9 +221,8 @@ You could then tunk the chuld, or pob it at a tendo, or whatever:
                         <ul>
                             <li>18 letters (j k l m n p s t w a e i o u)
                             <li>120 root words</li>
+                            <li><a href="http://rowa.giso.de/languages/toki-pona/english/lessons.php">Lessons by Robert Warnke</a></li>
                         </ul>
-
-                        <p><a href="http://rowa.giso.de/languages/toki-pona/english/lessons.php">Lessons by Robert Warnke</a></p>
                     </section>
                     <section>
                         <p>monsuta waso pi pan linja</p>
@@ -318,7 +311,7 @@ You could then tunk the chuld, or pob it at a tendo, or whatever:
                     </section>
                     <section>
                         <h2>Organ²/ASLSP</h2>
-                        <img src="img/halberstadt.png">
+                        <img src="img/halberstadt.png" style="height: 13em">
                     </section>
                     <section>
                         <img src="img/burchardi.jpg">
@@ -356,7 +349,13 @@ You could then tunk the chuld, or pob it at a tendo, or whatever:
                         <img src="img/zendo.jpg">
                     </section>
                 </section>
-				<section>ENDE</section>
+				<section>
+                    <h2>Thanks!</h2>
+                    <img src="img/itsfun.png" style="height: 7em">
+                    <h4>@bleeptrack – <a href="https://www.bleeptrack.de">bleeptrack.de</a></h4>
+                    <h4>@blinry – <a href="https://morr.cc">morr.cc</a></h4>
+                    <h4>Slides: <a href="https://morr.cc/operation-mindfuck/">morr.cc/operation-mindfuck/</a></h4>
+                </section>
 			</div>
 		</div>
 
