--- a/index.html
+++ b/index.html
@@ -322,7 +322,18 @@ You could then tunk the chuld, or pob it at a tendo, or whatever:
                         <iframe width="800" height="450" src="https://www.youtube.com/embed/sCgT94A7WgI?t=3m50s&rel=0" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
                     </section>
                 </section>
-				<section>Optische Täuschungen/Sinnestäuschungen (Bleeptrack)</section>
+				<section>
+					<h2>Maker Optical Illustions</h2>
+					<section>
+						<h3>Infinity Mirror</h3>
+						<iframe width="800" height="450" src="https://www.youtube.com/embed/sAPGw0SD1DE" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+					</section>
+					<section>
+						<h3>Slomo Frame</h3>
+						<iframe width="800" height="450" src="https://www.youtube.com/embed/ZaX-22f8xPo" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+					</section>
+				</section>
+
 				<section>Turing-Vollständigkeit/NP-Schwere (Blinry)</section>
 				
 				<section>Zendo (Blinry)</section>
