--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@ You could then tunk the chuld, or pob it at a tendo, or whatever:
                     </section>
                 </section>
 				<section>
-					<h2>Maker Optical Illustions</h2>
+					<section><h2>Maker Optical Illustions</h2></section>
 					<section>
 						<h3>Infinity Mirror</h3>
 						<iframe width="800" height="450" src="https://www.youtube.com/embed/sAPGw0SD1DE" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
