--- a/index.html
+++ b/index.html
@@ -281,8 +281,20 @@ You could then tunk the chuld, or pob it at a tendo, or whatever:
 						<iframe width="100%" height="500px" src="https://www.youtube.com/embed/F6ct7uCKMgs" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
 					</section>
 					<section>
-						<h3><a target="_blank" href="http://paulbourke.net/fractals/clifford/">(Clifford) Attractors</a></h3>
-						<iframe width="100%" height="500px" src="https://www.youtube.com/embed/3Inmte38_iQ" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+						<h3>Scribbleplot</h3>
+						<img height="500px" src="cat.jpg">
+					</section>
+					<section>
+						<h3>Scribbleplot</h3>
+						<img height="500px" src="scribbleplot.gif">
+					</section>
+					<section>
+						<a href="http://jasondorie.com/page_cnc.html"><h3>Stipplegen</h3></a>
+						<img height="500px" src="Stipplegen.jpg">
+					</section>
+					<section>
+						<a href="http://jasondorie.com/page_cnc.html"><h3>Reaction-Diffusion</h3></a>
+						<img height="500px" src="reaction.gif">
 					</section>
 					<section>
 						<h3>#plottertwitter</h3>
@@ -291,7 +303,7 @@ You could then tunk the chuld, or pob it at a tendo, or whatever:
 					</section>
 					<section>
 						<h3>#plottertwitter</h3>
-						<blockquote class="twitter-tweet" data-conversation="none" data-lang="de"><p lang="en" dir="ltr">Mona Lisa + Kolomyjec’s Random Squares weighted through image data, 35x54 squares on 24”x36” watercolor paper <a href="https://twitter.com/hashtag/plottertwitter?src=hash&amp;ref_src=twsrc%5Etfw">#plottertwitter</a> <a href="https://t.co/f0fxGLNd3L">pic.twitter.com/f0fxGLNd3L</a></p>&mdash; Paul Rickards (@paulrickards) <a href="https://twitter.com/paulrickards/status/944667563988054016?ref_src=twsrc%5Etfw">23. Dezember 2017</a></blockquote>
+						<blockquote class="twitter-tweet" data-conversation="none" data-lang="de" width="100%"><p lang="en" dir="ltr">Mona Lisa + Kolomyjec’s Random Squares weighted through image data, 35x54 squares on 24”x36” watercolor paper <a href="https://twitter.com/hashtag/plottertwitter?src=hash&amp;ref_src=twsrc%5Etfw">#plottertwitter</a> <a href="https://t.co/f0fxGLNd3L">pic.twitter.com/f0fxGLNd3L</a></p>&mdash; Paul Rickards (@paulrickards) <a href="https://twitter.com/paulrickards/status/944667563988054016?ref_src=twsrc%5Etfw">23. Dezember 2017</a></blockquote>
 						<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 					</section>
 					<section>
