Add slides about Flatland, Black Midi

--- a/index.html
+++ b/index.html
@@ -119,6 +119,10 @@
 				</section>
 				<section>
                     <section>
+                        <h2>4D</h2>
+                        <img src="img/flatland.jpg">
+                    </section>
+                    <section>
                         <img src="img/4dtoys.jpg">
                     </section>
                     <section>
@@ -213,9 +217,6 @@ You could then tunk the chuld, or pob it at a tendo, or whatever:
 				<section>
                     <section>
                         <h2>Toki Pona</h2>
-                    </section>
-                    <section>
-                        <img src="img/tokipona.png">
                     </section>
                     <section>
                         <ul>
@@ -337,9 +338,12 @@ You could then tunk the chuld, or pob it at a tendo, or whatever:
                     <section>
                         <img src="img/faeries2.png">
                     </section>
+                    <section>
+                        <img src="img/blackmidi.jpg">
+                    </section>
 
                     <section>
-                        <iframe width="800" height="450" src="https://www.youtube.com/embed/sCgT94A7WgI?t=3m50s&rel=0" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+                        <iframe width="800" height="450" src="https://www.youtube.com/embed/sCgT94A7WgI?start=230&rel=0" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
                     </section>
                 </section>
 				<section>Optische Täuschungen/Sinnestäuschungen (Bleeptrack)</section>
