--- a/index.html
+++ b/index.html
@@ -133,13 +133,10 @@
                     </section>
                 </section>
 				<section>
-					<section><h2>Mindfuck Spiele</h2></section>
-					
                     <section>
                         <img src="img/gostak.png">
 
-                        <a href="http://ifdb.tads.org/viewgame?id=w5s3sv43s3p98v45">ifdb.tads.org/viewgame?id=w5s3sv43s3p98v45</a>
-
+                        <p><a href="http://iplayif.com/?story=http%3A%2F%2Fwww.ifarchive.org%2Fif-archive%2Fgames%2Fzcode%2Fgostak.z5">An Interofgan Halpock</a></p>
                     </section>
                     <section>
                         <code><pre>
@@ -193,6 +190,10 @@ You could then tunk the chuld, or pob it at a tendo, or whatever:
   Nothing heamy results.
                         </pre></code>
                     </section>
+                </section>
+				<section>
+					<section><h2>Mindfuck Spiele</h2></section>
+					
                     <section>
                     	<h3>The Stanley Parable</h3>
                     	<iframe width="800" height="450" src="https://www.youtube.com/embed/Kl5Jp66xyd4?start=120" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
@@ -254,10 +255,6 @@ You could then tunk the chuld, or pob it at a tendo, or whatever:
                         <h2>Talking to aliens</h2>
                     </section>
                     <section>
-                        <h2>Arecibo message</h2>
-                        <img src="img/arecibo.svg" style="height: 13em">
-                    </section>
-                    <section>
                         <h2>Pioneer plaque</h2>
                         <img src="img/pioneer.svg" style="height: 13em">
                     </section>
@@ -268,6 +265,10 @@ You could then tunk the chuld, or pob it at a tendo, or whatever:
                     <section>
                         <h2>Voyager Golden Record</h2>
                         <img src="img/goldenrecord2.jpg" style="height: 13em">
+                    </section>
+                    <section>
+                        <h2>Arecibo message</h2>
+                        <img src="img/arecibo.svg" style="height: 13em">
                     </section>
                 </section>
 				<section>
