--- a/index.html
+++ b/index.html
@@ -24,19 +24,6 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-
-
-
-
-
-
-
-
-
- 
-
-
-
 				<section>
                     <img src="img/resistors.png" style="height: 8em">
                     <h2>Operation Mindfuck</h2>
@@ -133,6 +120,17 @@
                     </section>
                 </section>
 				<section>
+					<section><h2>Maker Optical Illustions</h2></section>
+					<section>
+						<h3>Infinity Mirror</h3>
+						<iframe width="800" height="450" src="https://www.youtube.com/embed/sAPGw0SD1DE" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+					</section>
+					<section>
+						<h3>Slomo Frame</h3>
+						<iframe width="800" height="450" src="https://www.youtube.com/embed/ZaX-22f8xPo" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+					</section>
+				</section>
+				<section>
                     <section>
                         <img src="img/gostak.png">
 
@@ -212,6 +210,12 @@ You could then tunk the chuld, or pob it at a tendo, or whatever:
                     </section>
                 </section>
 				<section>
+                    <section>
+                        <h2>Zendo</h2>
+                        <img src="img/zendo.jpg">
+                    </section>
+                </section>
+				<section>
 					<h2>Regex crosswords</h2>
 					<a target="_blank" href="https://regexcrossword.com/challenges/intermediate/puzzles/1">Los geht's!</a>
 				</section>
@@ -237,38 +241,6 @@ You could then tunk the chuld, or pob it at a tendo, or whatever:
                     </section>
                     <section>
                         <a href="https://morr.cc/sike-mama/"><img src="img/sikemama.png" style="height: 15em"></a>
-                    </section>
-                </section>
-				<section>
-					<section><h2>Autostereogramme</h2></section>
-					<section><img src="stereogramm.jpg"></section>
-					<section>
-						<img width="100%" height="auto" src="https://upload.wikimedia.org/wikipedia/commons/9/9b/Stereogram_Tut_Animated_Shark_Small.gif">
-						<h4>CC-BY-SA Fred Hsu</h4>
-					</section>
-
-					<section><a target="_blank" href="http://www.hidden-3d.com/games_stereogram_tetris.php">Tetris</a></section>
-					<section><a target="_blank" href="http://andygiger.com/science/riddle3/riddle3.html">3D riDDle III</a></section>
-				</section>
-                <section>
-                    <section>
-                        <h2>Talking to aliens</h2>
-                    </section>
-                    <section>
-                        <h2>Pioneer plaque</h2>
-                        <img src="img/pioneer.svg" style="height: 13em">
-                    </section>
-                    <section>
-                        <h2>Voyager Golden Record</h2>
-                        <img src="img/goldenrecord1.jpg" style="height: 13em">
-                    </section>
-                    <section>
-                        <h2>Voyager Golden Record</h2>
-                        <img src="img/goldenrecord2.jpg" style="height: 13em">
-                    </section>
-                    <section>
-                        <h2>Arecibo message</h2>
-                        <img src="img/arecibo.svg" style="height: 13em">
                     </section>
                 </section>
 				<section>
@@ -300,24 +272,43 @@ You could then tunk the chuld, or pob it at a tendo, or whatever:
 					</section>
 					<section>
 						<h3>#plottertwitter</h3>
-						<blockquote class="twitter-tweet" data-lang="de"><p lang="en" dir="ltr">Another day, another 3D head sliced and plotted. Don, in orange. <a href="https://twitter.com/hashtag/plottertwitter?src=hash&amp;ref_src=twsrc%5Etfw">#plottertwitter</a> <a href="https://t.co/6ONaWLmpVk">pic.twitter.com/6ONaWLmpVk</a></p>&mdash; Gregg Wygonik (@gwygonik) <a href="https://twitter.com/gwygonik/status/946577169177747456?ref_src=twsrc%5Etfw">29. Dezember 2017</a></blockquote>
-						<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 					</section>
+				</section>
+                <section>
+                    <section>
+                        <h2>Talking to aliens</h2>
+                    </section>
+                    <section>
+                        <h2>Pioneer plaque</h2>
+                        <img src="img/pioneer.svg" style="height: 13em">
+                    </section>
+                    <section>
+                        <h2>Voyager Golden Record</h2>
+                        <img src="img/goldenrecord1.jpg" style="height: 13em">
+                    </section>
+                    <section>
+                        <h2>Voyager Golden Record</h2>
+                        <img src="img/goldenrecord2.jpg" style="height: 13em">
+                    </section>
+                    <section>
+                        <h2>Arecibo message</h2>
+                        <img src="img/arecibo.svg" style="height: 13em">
+                    </section>
+                </section>
+				<section>
+					<section><h2>Autostereogramme</h2></section>
+					<section><img src="stereogramm.jpg"></section>
 					<section>
-						<h3>#plottertwitter</h3>
-						<blockquote class="twitter-tweet" data-conversation="none" data-lang="de" width="100%"><p lang="en" dir="ltr">Mona Lisa + Kolomyjec’s Random Squares weighted through image data, 35x54 squares on 24”x36” watercolor paper <a href="https://twitter.com/hashtag/plottertwitter?src=hash&amp;ref_src=twsrc%5Etfw">#plottertwitter</a> <a href="https://t.co/f0fxGLNd3L">pic.twitter.com/f0fxGLNd3L</a></p>&mdash; Paul Rickards (@paulrickards) <a href="https://twitter.com/paulrickards/status/944667563988054016?ref_src=twsrc%5Etfw">23. Dezember 2017</a></blockquote>
-						<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+						<img width="100%" height="auto" src="https://upload.wikimedia.org/wikipedia/commons/9/9b/Stereogram_Tut_Animated_Shark_Small.gif">
+						<h4>CC-BY-SA Fred Hsu</h4>
 					</section>
-					<section>
-						<h3>#plottertwitter</h3>
-						<blockquote class="twitter-tweet" data-lang="de"><p lang="en" dir="ltr">Conway’s Game of Life in 16 Generations<br>Code → Ink on Paper<a href="https://twitter.com/hashtag/abstract?src=hash&amp;ref_src=twsrc%5Etfw">#abstract</a> <a href="https://twitter.com/hashtag/axidraw?src=hash&amp;ref_src=twsrc%5Etfw">#axidraw</a> <a href="https://twitter.com/hashtag/creativecoding?src=hash&amp;ref_src=twsrc%5Etfw">#creativecoding</a> <a href="https://twitter.com/hashtag/generativedesign?src=hash&amp;ref_src=twsrc%5Etfw">#generativedesign</a> <a href="https://twitter.com/hashtag/plottertwitter?src=hash&amp;ref_src=twsrc%5Etfw">#plottertwitter</a> <a href="https://twitter.com/hashtag/processing?src=hash&amp;ref_src=twsrc%5Etfw">#processing</a> <a href="https://t.co/4g1rKak20D">pic.twitter.com/4g1rKak20D</a></p>&mdash; Jacob Joaquin (@JacobJoaquin) <a href="https://twitter.com/JacobJoaquin/status/923681854254825473?ref_src=twsrc%5Etfw">26. Oktober 2017</a></blockquote>
-						<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
-					</section>
+					<section><a target="_blank" href="http://www.hidden-3d.com/games_stereogram_tetris.php">Tetris</a></section>
+					<section><a target="_blank" href="http://andygiger.com/science/riddle3/riddle3.html">3D riDDle III</a></section>
 				</section>
 				<section>
                     <section>
-                        <h2>Music</h2>
+                        <h2>Music?</h2>
                     </section>
                     <section>
                         <h2>4′33″</h2>
@@ -359,24 +350,7 @@ You could then tunk the chuld, or pob it at a tendo, or whatever:
                         <iframe width="800" height="450" src="https://www.youtube.com/embed/sCgT94A7WgI?start=230&rel=0" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
                     </section>
                 </section>
-				<section>
-					<section><h2>Maker Optical Illustions</h2></section>
-					<section>
-						<h3>Infinity Mirror</h3>
-						<iframe width="800" height="450" src="https://www.youtube.com/embed/sAPGw0SD1DE" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
-					</section>
-					<section>
-						<h3>Slomo Frame</h3>
-						<iframe width="800" height="450" src="https://www.youtube.com/embed/ZaX-22f8xPo" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
-					</section>
-				</section>
 
-				<section>
-                    <section>
-                        <h2>Zendo</h2>
-                        <img src="img/zendo.jpg">
-                    </section>
-                </section>
 				<section>
                     <h2>Thanks!</h2>
                     <img src="img/itsfun.png" style="height: 7em">
