Fix Stipplegen image

--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@ You could then tunk the chuld, or pob it at a tendo, or whatever:
 					</section>
 					<section>
 						<a href="http://jasondorie.com/page_cnc.html"><h3>Stipplegen</h3></a>
-						<img height="500px" src="Stipplegen.jpg">
+						<img height="500px" src="stipplegen.jpg">
 					</section>
 					<section>
 						<a href="http://jasondorie.com/page_cnc.html"><h3>Reaction-Diffusion</h3></a>
